--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^5.0.3",
     "@angular/animations": "~11.0.6",
+    "@angular/cdk": "^11.2.0",
     "@angular/common": "~11.0.6",
     "@angular/compiler": "~11.0.6",
     "@angular/core": "~11.0.6",
     "@angular/forms": "~11.0.6",
+    "@angular/material": "^11.2.0",
+    "@angular/material-moment-adapter": "^11.2.0",
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "@ngrx/store": "^11.0.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -28,6 +35,7 @@
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.6",
     "@types/jasmine": "~3.6.0",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
